fix - Corrected alignment of navbar options on tablet

--- a/styles/tablet.css
+++ b/styles/tablet.css
@@ -25,10 +25,6 @@
     display: flex;
     flex-direction: row;
 }
-.navbar__menu--list-item {
-    margin: 1.2rem;
-    padding: 1.6rem 0;
-}
 .about {
     height: 43rem;
     position: relative;
